--- a/helmfiles/coding/values/code-server/common.yaml
+++ b/helmfiles/coding/values/code-server/common.yaml
@@ -45,13 +45,13 @@ resources:
 persistence:
   config:
     enabled: true
-    accessMode: ReadWriteOnce
+    accessMode: ReadWriteMany
     storageClass: ceph
     size: 8Gi
     annotations: {}
   sharedData:
     enabled: true
-    accessMode: ReadWriteOnce
+    accessMode: ReadWriteMany
     storageClass: ceph
     size: 8Gi
     annotations: {}
