Bypass assertNoLeakedSecrets for grafana
Until
https://github.com/grafana/helm-charts/issues/2899#issuecomment-1909929079
gets resolved

--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -79,8 +79,7 @@ prometheusOperator:
         memory: 200Mi
 
 grafana:
-  imageRenderer:
-    enabled: true
+  assertNoLeakedSecrets: false
   deploymentStrategy:
     type: Recreate
   securityContext:
