--- a/helmfiles/ingress/values/external-dns/common.yaml
+++ b/helmfiles/ingress/values/external-dns/common.yaml
@@ -9,3 +9,12 @@ cloudflare:
 txtPrefix: k8s-
 
 policy: sync
+
+
+resources:
+  requests:
+    cpu: 10m
+    memory: 32Mi
+  limits:
+    cpu: 20m
+    memory: 64Mi
