--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -82,6 +82,7 @@ grafana:
   assertNoLeakedSecrets: false
   deploymentStrategy:
     type: Recreate
+  priorityClassName: system-node-critical
   securityContext:
     fsGroup: 1000
     runAsGroup: 1000
@@ -172,6 +173,7 @@ prometheus:
   service:
     sessionAffinity: "ClientIP"
   prometheusSpec:
+    priorityClassName: system-node-critical
     replicas: 3
     ruleSelector: {}
     ruleNamespaceSelector: {}
