Add priorityClassName handling for home-assistant

--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -15,6 +15,9 @@ config:
 podSecurityContext:
   fsGroup: 1000
 
+priorityClassName:
+  homeassistant: system-cluster-critical
+
 securityContexts:
   # homeassistant:
   #   capabilities:
