Update priorityClassName's for keycloak, ingress and prometheus

--- a/helmfiles/ingress/values/ingress-nginx/common.yaml
+++ b/helmfiles/ingress/values/ingress-nginx/common.yaml
@@ -5,7 +5,7 @@ controller:
   updateStrategy:
     type: Recreate
 
-  priorityClassName: system-node-critical
+  priorityClassName: system-cluster-critical
   replicaCount: 3
 
   resources:
