--- a/helmfiles/authentication/values/keycloak/common.yaml
+++ b/helmfiles/authentication/values/keycloak/common.yaml
@@ -15,6 +15,8 @@ resources:
 
 proxy: edge
 
+priorityClassName: system-cluster-critical
+
 extraEnvVars:
 - name: KC_HOSTNAME_URL
   value: https://auth.szymonrichert.pl/
