--- a/helmfiles/media/values/jackett/common.yaml
+++ b/helmfiles/media/values/jackett/common.yaml
@@ -30,7 +30,7 @@ resources:
 
 oauth2proxy:
   config:
-    clientId: qbittorrent
+    clientId: jackett
     redirectUrl: https://jackett.szymonrichert.pl/oauth2/callback
     realmUrl: https://auth.szymonrichert.pl/realms/master
     cookieName: oauth2-authorization-cookie
