--- a/helmfiles/media/values/filebrowser/common.yaml
+++ b/helmfiles/media/values/filebrowser/common.yaml
@@ -29,12 +29,12 @@ podSecurityContext:
 #     memory: 128Mi
 
 oauth2proxy:
-  config:
-    clientId: files
-    redirectUrl: https://files.szymonrichert.pl/oauth2/callback
-    realmUrl: https://auth.szymonrichert.pl/realms/master
-    cookieName: oauth2-authorization-cookie
-    cookieDomain: files.szymonrichert.pl
+  clientId: files
+  redirectUrl: https://files.szymonrichert.pl/oauth2/callback
+  realmUrl: https://auth.szymonrichert.pl/realms/master
+  cookieName: oauth2-authorization-cookie
+  cookieDomain: files.szymonrichert.pl
+  allowedGroups: files
 
 persistence:
   config:
