--- a/helmfiles/media/values/qbittorrent/common.yaml
+++ b/helmfiles/media/values/qbittorrent/common.yaml
@@ -29,12 +29,12 @@ resources:
     memory: 128Mi
 
 oauth2proxy:
-  config:
-    clientId: qbittorrent
-    redirectUrl: https://qbt.szymonrichert.pl/oauth2/callback
-    realmUrl: https://auth.szymonrichert.pl/realms/master
-    cookieName: oauth2-authorization-cookie
-    cookieDomain: qbt.szymonrichert.pl
+  clientId: qbittorrent
+  redirectUrl: https://qbt.szymonrichert.pl/oauth2/callback
+  realmUrl: https://auth.szymonrichert.pl/realms/master
+  cookieName: oauth2-authorization-cookie
+  cookieDomain: qbt.szymonrichert.pl
+  allowedGroups: qbittorrent
 
 persistence:
   config:
