--- a/helmfiles/media/values/sonarr/common.yaml
+++ b/helmfiles/media/values/sonarr/common.yaml
@@ -29,12 +29,12 @@ resources:
     memory: 128Mi
 
 oauth2proxy:
-  config:
-    clientId: sonarr
-    redirectUrl: https://sonarr.szymonrichert.pl/oauth2/callback
-    realmUrl: https://auth.szymonrichert.pl/realms/master
-    cookieName: oauth2-authorization-cookie
-    cookieDomain: sonarr.szymonrichert.pl
+  clientId: sonarr
+  redirectUrl: https://sonarr.szymonrichert.pl/oauth2/callback
+  realmUrl: https://auth.szymonrichert.pl/realms/master
+  cookieName: oauth2-authorization-cookie
+  cookieDomain: sonarr.szymonrichert.pl
+  allowedGroups: sonarr
 
 persistence:
   config:
