--- a/helmfiles/home-automation/values/esphome/common.yaml
+++ b/helmfiles/home-automation/values/esphome/common.yaml
@@ -16,13 +16,12 @@ ingress:
 
 
 oauth2proxy:
-  enabled: true
-  config:
-    clientId: esphome
-    redirectUrl: https://esphome.szymonrichert.pl/oauth2/callback
-    realmUrl: https://auth.szymonrichert.pl/realms/master
-    cookieName: oauth2-authorization-cookie
-    cookieDomain: esphome.szymonrichert.pl
+  clientId: esphome
+  redirectUrl: https://esphome.szymonrichert.pl/oauth2/callback
+  realmUrl: https://auth.szymonrichert.pl/realms/master
+  cookieName: oauth2-authorization-cookie
+  cookieDomain: esphome.szymonrichert.pl
+  allowedGrous: esphome
 
 # affinity:
 #   nodeAffinity:
