Add ability to manage bigger files through filebrowser

--- a/helmfiles/media/values/filebrowser/common.yaml
+++ b/helmfiles/media/values/filebrowser/common.yaml
@@ -4,6 +4,7 @@ ingress:
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/tls-acme: "true"
+    nginx.ingress.kubernetes.io/proxy-body-size: 20g
   hosts:
     - host: files.szymonrichert.pl
       paths:
