--- a/helmfiles/monitoring/values/prometheus/raw/postgres.common.pre.yaml
+++ b/helmfiles/monitoring/values/prometheus/raw/postgres.common.pre.yaml
@@ -13,6 +13,7 @@ spec:
   dockerImage: ghcr.io/zalando/spilo-15:3.0-p1
   teamId: "grafana"
   numberOfInstances: 1
+  podPriorityClassName: system-cluster-critical
   users:  # Application/Robot users
     superuser:
     - superuser
