--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -205,6 +205,12 @@ prometheus:
           resources:
             requests:
               storage: 100Gi
+    additionalScrapeConfigs:
+      - job_name: nas
+        metrics_path: /metrics
+        static_configs:
+          - targets:
+            - 192.168.1.32:9100
 
 prometheus-node-exporter:
   hostNetwork: false
