--- a/helmfiles/media/values/qbittorrent/common.yaml
+++ b/helmfiles/media/values/qbittorrent/common.yaml
@@ -23,7 +23,7 @@ podSecurityContext:
 resources:
   limits:
     cpu: "1"
-    memory: 512Mi
+    # memory: 512Mi
   requests:
     cpu: 100m
     memory: 128Mi
