--- a/helmfiles/home-automation/values/esphome/common.yaml
+++ b/helmfiles/home-automation/values/esphome/common.yaml
@@ -44,9 +44,9 @@ resources:
   requests:
     cpu: 10m
     memory: 64Mi
-  limits:
-    cpu: 500m
-    memory: 512Mi
+  # limits:
+  #   cpu: 500m
+  #   memory: 512Mi
 
 
 persistence:
