Enable GPU monitoring for NAS

--- a/nas-exporter.dockercompose.yaml
+++ b/nas-exporter.dockercompose.yaml
@@ -16,3 +16,16 @@ services:
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
     ports:
       - 9100:9100
+  gpu-exporter:
+    image: nvcr.io/nvidia/k8s/dcgm-exporter:3.3.5-3.4.0-ubuntu22.04
+    container_name: gpu-exporter
+    restart: unless-stopped
+    ports:
+      - 9400:9400
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
