--- a/helmfiles/monitoring/values/prometheus/common.yaml
+++ b/helmfiles/monitoring/values/prometheus/common.yaml
@@ -211,6 +211,11 @@ prometheus:
         static_configs:
           - targets:
             - 192.168.1.72:9100
+      - job_name: nas-gpu
+        metrics_path: /metrics
+        static_configs:
+          - targets:
+            - 192.168.1.72:9400
 
 prometheus-node-exporter:
   hostNetwork: false
