--- a/helmfiles/backbone/values/postgres-operator/common.yaml
+++ b/helmfiles/backbone/values/postgres-operator/common.yaml
@@ -1,11 +1,3 @@
-image:
-  tag: v1.8.2-43-g3e148ea5
-
-readinessProbe: false
-
-configKubernetes:
-  enable_pod_antiaffinity: true
-  enable_readiness_probe: true
 
 resources:
   requests:
@@ -15,18 +7,16 @@ resources:
     memory: 64Mi
     cpu: 10m
 
-configAwsOrGcp:
-  wal_s3_bucket: "database-backup-szymonrychu"
-
-configLogicalBackup:
-  logical_backup_cpu_limit: "100m"
-  logical_backup_cpu_request: "10m"
-  logical_backup_memory_limit: "256Mi"
-  logical_backup_memory_request: "128Mi"
-  logical_backup_job_prefix: "logical-backup-"
-  logical_backup_provider: "s3"
-  logical_backup_s3_bucket: "database-backup-szymonrychu"
-  logical_backup_s3_region: "eu-central-1"
-  logical_backup_s3_retention_time: 7days
-
-  
+monitoring:
+  # -- Specifies whether the monitoring should be enabled. Requires Prometheus Operator CRDs.
+  podMonitorEnabled: true
+  grafanaDashboard:
+    create: true
+    # -- Allows overriding the namespace where the ConfigMap will be created, defaulting to the same one as the Release.
+    namespace: ""
+    # -- The name of the ConfigMap containing the dashboard.
+    configMapName: "cnpg-grafana-dashboard"
+    # -- Label that ConfigMaps should have to be loaded as dashboards.
+    sidecarLabel: "grafana_dashboard"
+    # -- Label value that ConfigMaps should have to be loaded as dashboards.
+    sidecarLabelValue: "1"
