Disable postgresql integration for HA

--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -8,7 +8,7 @@ config:
     trustedProxies:
       - 0.0.0.0/0
   postgresql:
-    enabled: true
+    enabled: false
   prometheus:
     enabled: true
 
