Add NUC4 and NAS nodes to kubernetes cluster

--- a/helmfiles/monitoring/values/prometheus/raw/nas-dashboard.common.post.yaml
+++ b/helmfiles/monitoring/values/prometheus/raw/nas-dashboard.common.post.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: requests-limits-dashboard
+  name: nas-dashboard
   namespace: monitoring
   labels:
     grafana_dashboard: "1"
