--- a/helmfiles/storage/values/rook-ceph-cluster/common.yaml
+++ b/helmfiles/storage/values/rook-ceph-cluster/common.yaml
@@ -20,6 +20,19 @@ toolbox:
       memory: "128Mi"
 
 cephClusterSpec:
+  placement:
+    all:
+      nodeAffinity:
+        requiredDuringSchedulingIgnoredDuringExecution:
+          nodeSelectorTerms:
+          - matchExpressions:
+            - key: kubernetes.io/hostname
+              operator: In
+              values:
+              - nuc1
+              - nuc2
+              - nuc3
+              - nuc4
   mon:
     count: 3
     allowMultiplePerNode: false
@@ -42,7 +55,7 @@ cephClusterSpec:
     onlyApplyOSDPlacement: false
     storageClassDeviceSets:
       - name: data
-        count: 3
+        count: 4
         portable: false
         tuneDeviceClass: true
         tuneFastDeviceClass: false
