--- a/helmfiles/storage/values/rook-ceph-cluster/raw/blockstorage.common.pre.yaml
+++ b/helmfiles/storage/values/rook-ceph-cluster/raw/blockstorage.common.pre.yaml
@@ -77,3 +77,27 @@ spec:
           operator: In
           values:
           - nuc3
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: rook-ceph-nuc4
+  namespace: storage-system
+spec:
+  capacity:
+    storage: 230Gi
+  volumeMode: Block
+  accessModes:
+    - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Delete
+  storageClassName: block-storage
+  local:
+    path: /dev/sda
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - nuc4
