--- a/helmfiles/media/values/sonarr/common.yaml
+++ b/helmfiles/media/values/sonarr/common.yaml
@@ -14,12 +14,6 @@ ingress:
       hosts:
         - sonarr.szymonrichert.pl
 
-# podSecurityContext:
-#   fsGroup: 1000
-#   runAsGroup: 1000
-#   # runAsNonRoot: true
-#   runAsUser: 1000
-
 resources:
   limits:
     cpu: "2"
@@ -39,9 +33,8 @@ oauth2proxy:
 persistence:
   config:
     enabled: true
-    storageClass: ceph
-    type: pvc
-    size: 1Gi
+    type: hostPath
+    hostPath: /var/lib/sonarr
   media:
     enabled: true
     type: hostPath
