--- a/helmfiles/home-automation/helmfile.yaml
+++ b/helmfiles/home-automation/helmfile.yaml
@@ -29,6 +29,14 @@ templates:
     - values/{{`{{ .Release.Name }}`}}/{{`{{ .Environment.Name }}`}}.secrets.yaml
 
 releases:
+- name: eclipse-mosquitto
+  chart: szymonrychu/eclipse-mosquitto
+  version: 0.1.0
+  namespace: home-automation
+  labels:
+    purpose: home-automation
+    application: eclipse-mosquitto
+  <<: *default
 
 - name: esphome
   chart: szymonrychu/esphome
