--- a/helmfiles/ingress/values/ingress-nginx/common.yaml
+++ b/helmfiles/ingress/values/ingress-nginx/common.yaml
@@ -1,12 +1,17 @@
+tcp:
+  "1883": "home-automation/eclipse-mosquitto:1883"
+
 controller:
   hostNetwork: true
+  dnsPolicy: ClusterFirstWithHostNet
+  dnsConfig:
+    nameservers:
+      - 192.168.1.1
   hostPort:
     enabled: true
-  updateStrategy:
-    type: Recreate
 
   priorityClassName: system-cluster-critical
-  replicaCount: 3
+  replicaCount: 4
 
   resources:
     requests:
@@ -27,6 +32,7 @@ controller:
               - nuc1
               - nuc2
               - nuc3
+              - nuc4
     podAntiAffinity:
       requiredDuringSchedulingIgnoredDuringExecution:
       - labelSelector:
@@ -37,47 +43,46 @@ controller:
             - ingress-nginx
         topologyKey: "kubernetes.io/hostname"
 
-
   admissionWebhooks:
-    enabled: false
+    enabled: true
     timeoutSeconds: 10
 
-metrics:
-  enabled: true
-  serviceMonitor:
+  metrics:
     enabled: true
-  prometheusRule:
-    enabled: true
-    rules:
-      - alert: NGINXConfigFailed
-        expr: count(nginx_ingress_controller_config_last_reload_successful == 0) > 0
-        for: 1s
-        labels:
-          severity: critical
-        annotations:
-          description: bad ingress config - nginx config test failed
-          summary: uninstall the latest ingress changes to allow config reloads to resume
-      - alert: NGINXCertificateExpiry
-        expr: (avg(nginx_ingress_controller_ssl_expire_time_seconds) by (host) - time()) < 604800
-        for: 1s
-        labels:
-          severity: critical
-        annotations:
-          description: ssl certificate(s) will expire in less then a week
-          summary: renew expiring certificates to avoid downtime
-      - alert: NGINXTooMany500s
-        expr: 100 * ( sum( nginx_ingress_controller_requests{status=~"5.+"} ) / sum(nginx_ingress_controller_requests) ) > 5
-        for: 1m
-        labels:
-          severity: warning
-        annotations:
-          description: Too many 5XXs
-          summary: More than 5% of all requests returned 5XX, this requires your attention
-      - alert: NGINXTooMany400s
-        expr: 100 * ( sum( nginx_ingress_controller_requests{status=~"4.+"} ) / sum(nginx_ingress_controller_requests) ) > 5
-        for: 1m
-        labels:
-          severity: warning
-        annotations:
-          description: Too many 4XXs
-          summary: More than 5% of all requests returned 4XX, this requires your attention
+    serviceMonitor:
+      enabled: true
+    prometheusRule:
+      enabled: true
+      rules:
+        - alert: NGINXConfigFailed
+          expr: count(nginx_ingress_controller_config_last_reload_successful == 0) > 0
+          for: 1s
+          labels:
+            severity: critical
+          annotations:
+            description: bad ingress config - nginx config test failed
+            summary: uninstall the latest ingress changes to allow config reloads to resume
+        - alert: NGINXCertificateExpiry
+          expr: (avg(nginx_ingress_controller_ssl_expire_time_seconds) by (host) - time()) < 604800
+          for: 1s
+          labels:
+            severity: critical
+          annotations:
+            description: ssl certificate(s) will expire in less then a week
+            summary: renew expiring certificates to avoid downtime
+        - alert: NGINXTooMany500s
+          expr: 100 * ( sum( nginx_ingress_controller_requests{status=~"5.+"} ) / sum(nginx_ingress_controller_requests) ) > 5
+          for: 1m
+          labels:
+            severity: warning
+          annotations:
+            description: Too many 5XXs
+            summary: More than 5% of all requests returned 5XX, this requires your attention
+        - alert: NGINXTooMany400s
+          expr: 100 * ( sum( nginx_ingress_controller_requests{status=~"4.+"} ) / sum(nginx_ingress_controller_requests) ) > 5
+          for: 1m
+          labels:
+            severity: warning
+          annotations:
+            description: Too many 4XXs
+            summary: More than 5% of all requests returned 4XX, this requires your attention
