--- a/helmfiles/home-automation/values/esphome/common.yaml
+++ b/helmfiles/home-automation/values/esphome/common.yaml
@@ -14,14 +14,9 @@ ingress:
       hosts:
         - esphome.szymonrichert.pl
 
-
-oauth2proxy:
-  clientId: esphome
-  redirectUrl: https://esphome.szymonrichert.pl/oauth2/callback
-  realmUrl: https://auth.szymonrichert.pl/realms/master
-  cookieName: oauth2-authorization-cookie
-  cookieDomain: esphome.szymonrichert.pl
-  allowedGrous: esphome
+podAnnotations:
+  oauth2-proxy-admission/configuration-secret-name: esphome-proxy
+  oauth2-proxy-admission/configuration-secret-namespace: home-automation
 
 securityContext:
   privileged: true
