--- a/helmfiles/media/values/filebrowser/common.yaml
+++ b/helmfiles/media/values/filebrowser/common.yaml
@@ -15,6 +15,10 @@ ingress:
       hosts:
         - files.szymonrichert.pl
 
+podAnnotations:
+  oauth2-proxy-admission/configuration-secret-name: files-proxy
+  oauth2-proxy-admission/configuration-secret-namespace: media
+
 podSecurityContext:
   fsGroup: 1000
   runAsGroup: 1000
@@ -28,14 +32,6 @@ podSecurityContext:
 #   requests:
 #     cpu: 100m
 #     memory: 128Mi
-
-oauth2proxy:
-  clientId: files
-  redirectUrl: https://files.szymonrichert.pl/oauth2/callback
-  realmUrl: https://auth.szymonrichert.pl/realms/master
-  cookieName: oauth2-authorization-cookie
-  cookieDomain: files.szymonrichert.pl
-  allowedGroups: files
 
 persistence:
   config:
