--- a/helmfiles/authentication/values/keycloak/common.yaml
+++ b/helmfiles/authentication/values/keycloak/common.yaml
@@ -28,6 +28,67 @@ extraEnvVars:
 podLabels:
   application: keycloak
 
+  # https://github.com/nkelemen18/koreui/releases/download/22.0.0/koreui-22.0.0.jar
+  # /opt/bitnami/keycloak/providers/
+
+extraVolumes:
+  - name: providers
+    emptyDir: {}
+
+extraVolumeMounts:
+  - mountPath: /opt/bitnami/keycloak/providers/
+    name: providers
+
+initContainers:
+  - name: init-copy-providers
+    image: docker.io/bitnami/keycloak:24.0.4-debian-12-r0
+    imagePullPolicy: IfNotPresent
+    securityContext:
+      allowPrivilegeEscalation: false
+      capabilities:
+        drop:
+        - ALL
+      privileged: false
+      readOnlyRootFilesystem: true
+      runAsGroup: 1001
+      runAsNonRoot: true
+      runAsUser: 1001
+      seLinuxOptions: {}
+      seccompProfile:
+        type: RuntimeDefault
+    command: [ bash ]
+    args:
+      - -c
+      - cp -R /opt/bitnami/keycloak/providers/ /providers/
+    volumeMounts:
+    - mountPath: /providers
+      name: providers
+
+  - name: koreui-download
+    image: busybox:1.36.1-glibc
+    imagePullPolicy: IfNotPresent
+    securityContext:
+      allowPrivilegeEscalation: false
+      capabilities:
+        drop:
+        - ALL
+      privileged: false
+      readOnlyRootFilesystem: true
+      runAsGroup: 1001
+      runAsNonRoot: true
+      runAsUser: 1001
+      seLinuxOptions: {}
+      seccompProfile:
+        type: RuntimeDefault
+    command: [ sh ]
+    args:
+      - -c
+      - 'wget -O /providers/koreui.jar https://github.com/nkelemen18/koreui/releases/download/22.0.0/koreui-22.0.0.jar'
+    volumeMounts:
+    - mountPath: /providers
+      name: providers
+
+
 affinity:
   nodeAffinity:
     requiredDuringSchedulingIgnoredDuringExecution:
