feat: Add gluetun to qbittorrent to enable torrent over VPN

--- a/helmfiles/media/values/qbittorrent/common.yaml
+++ b/helmfiles/media/values/qbittorrent/common.yaml
@@ -42,3 +42,11 @@ persistence:
     enabled: true
     type: hostPath
     hostPath: /samba
+
+vpnContainer:
+  enabled: true
+
+  resources:
+    limits:
+      cpu: 100m
+      memory: 128Mi
